@@ -18,11 +18,19 @@
 package org.apache.pig.impl.util;
 
 import java.io.ByteArrayInputStream;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileNotFoundException;
 import java.io.IOException;
+import java.io.InputStream;
+import java.io.SequenceInputStream;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Properties;
 
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.Path;
@@ -51,7 +59,7 @@ import com.google.common.collect.Lists;
  * Class with utility static methods
  */
 public class Utils {
-
+	private static final Log log = LogFactory.getLog(Utils.class);
     /**
      * This method is a helper for classes to implement {@link java.lang.Object#equals(java.lang.Object)}
      * checks if two objects are equals - two levels of checks are
@@ -268,5 +276,18 @@ public class Utils {
         
         return result;
     }
+    
+   public static InputStream getCompositeStream(InputStream in, Properties properties) {
+	   //Load default ~/.pigbootup if not specified by user
+    	final String bootupFile = properties.getProperty("pig.load.default.statements", System.getProperty("user.home") + "/.pigbootup");
+    	try {
+    	final InputStream inputSteam = new FileInputStream(new File(bootupFile));
+    	return new SequenceInputStream(inputSteam, in);
+    	} catch(FileNotFoundException fe) {
+    		log.info("Default bootup file " +bootupFile+ " not found");
+    		return in;
+    	}
+    }
+    
 
 }
