@@ -24,6 +24,8 @@ INCOMPATIBLE CHANGES
 
 IMPROVEMENTS
 
+PIG-2456: Pig should have a pigrc to specify default script cache (prkommireddi via daijy)
+
 PIG-2496: Cache resolved classes in PigContext (dvryaboy)
 
 PIG-2482: Integrate HCat DDL command into Pig (daijy)
